backend/eureka/eureka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka-container
        image: imadoualid/eureka-server:1
        imagePullPolicy: Always
