backend/eureka/eureka-service.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-service
spec:
  ports:
  - name: http
    targetPort: 8761
    port: 80
  selector:
    app: eureka
