backend/eureka/eureka-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: eureka.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: eureka-service
          servicePort: http
